2008-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (${lisp} ${SOME_MACHINE_LISP}, ../lisp/loaddefs.el):
	Use $(BOOTSTRAPEMACS) rather than witness-emacs.
	(bootstrap-emacs${EXEEXT}): Merge witness-emacs into it.
	(witness-emacs): Remove.
	(lisp, shortlisp): Move loaddefs.el earlier.
	(mostlyclean): Forget about witness-emacs.

2008-06-22  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (witness-emacs): Depend on temacs${EXEEXT}.
	(.SUFFIXES): Declare .el.elc as a suffix rule, for non-GNU makes.

2008-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (PRECOMP): Remove.
	(${lisp} ${SOME_MACHINE_LISP}): Remove pseudo dependency on PRECOMP.
	(witness-emacs): Run `compile-first'.
	(.el.elc): Use the new compile-onefile target.

2008-06-21  Kenichi Handa  <handa@m17n.org>

	* xftfont.c (xftfont_open): Handle QCembolden only when
	FC_EMBOLDEN is defined.

2008-06-21  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (witness-emacs): Use ../lisp, not $(lispsource).
	(.el.elc): Likewise.

2008-06-21  Miles Bader  <miles@gnu.org>

	* Makefile.in (../lisp/loaddefs.el): Build autoloads in the lisp
	build dir, not the lisp source dir.

2008-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (emacs${EXEEXT}): Link the new emacs to bootstrap-emacs.
	(bootstrapclean): Remove.
	(.el.elc): New rule.
	(PRECOMP): New var.
	(../lisp/subdirs.el): Remove.
	(bootstrap-emacs${EXEEXT}): Remove subdirs.el and charpro.el dependency.
	(witness-emacs): New target.
	(mostlyclean): Remove witness-emacs as well.
	(../lisp/loaddefs.el, ${lisp} ${SOME_MACHINE_LISP}):
	Add witness-emacs dependency.

2008-06-20  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (Ffont_face_attributes): Omit key-attribute pairs not
	defined by the font.

2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (emacs${EXEEXT}): Depend on the machine-specific files.
	(bootstrap-clean): New target that keeps TAGS around.